Adds social links, updates experiences and description

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         				<a href="#projects" class="nav-tab"><li>Projects</li></a>
                 <a href="#education" class="nav-tab"><li>Education</li></a>
                 <a href="#downloads" class="nav-tab"><li>Downloads</li></a>
-                <a href="#links" class="nav-tab"><li>Cool sailing stuff</li></a>
+                <a href="#links" class="nav-tab"><li>Sailing features</li></a>
         			</ul>
         		</nav>
           </div>
@@ -58,10 +58,11 @@
           <div id="about" class="info-container">
             <h2>This is me</h2>
             <p>
-              In 2017 I finally turned my long-standing interest in coding into
-              something concrete and completed a full-stack web development bootcamp.
-              Now I’m looking to take on a new challenge working on a problem I care
-              about and a solution I believe in.
+              Full stack Ruby on Rails developer. Able to rapidly gain proficiency
+              regardless of environment or job setting having successfully transitioned
+              between finance, banking software, yacht racing, and web development.
+              Always thinking of the human side of code by understanding what the
+              customer wants, what the team needs, and what the business goals are.
               <br><br>
               After signing up to sail around the world on the Clipper Race in
               2013-14 I spent the past three years as a professional sailor
@@ -84,9 +85,27 @@
             </div>
           </div>
 
+          <!-- Links -->
+          <div class="info-container">
+            <div class="flex-box flex-around">
+              <a href="https://github.com/KP09">
+                <img src="images/github.png" alt="" class="social-thumbnail">
+              </a>
+              <a href="https://www.linkedin.com/in/postmakees/">
+                <img src="images/linkedin.png" alt="" class="social-thumbnail">
+              </a>
+              <a href="https://www.facebook.com/keespostma">
+                <img src="images/facebook.png" alt="" class="social-thumbnail">
+              </a>
+              <a href="https://www.instagram.com/kpyachtracing/">
+                <img src="images/insta.png" alt="" class="social-thumbnail">
+              </a>
+            </div>
+          </div>
+
           <!-- Professional experience -->
           <div id="experience" class="info-container">
-            <h2>Professional experience</h2>
+            <h2>Experience</h2>
             <!-- Le Wagon -->
             <div class="experience-box">
               <div class="flex-box">
@@ -94,10 +113,11 @@
                   <div>
                     <h3>Teaching Assistant</h3>
                     <a href="https://www.lewagon.com/" target="_blank"><h4>Le Wagon</h4></a>
-                    <p>Freelance work helping students at Le Wagon, a 9-week
-                      full-stack web development bootcamp, through their daily
-                      challenges by troubleshooting issues and explaining
-                      concepts.</p>
+                    <p>Supported the successful training of students in Europe's #1 immersive full-stack Ruby on Rails program.</p>
+                    <ul>
+                      <li>Discussed, analyzed and strategized MVP requirements, database schema design, and MVC methodology with multiple teams building marketplace applications.</li>
+                      <li>Mentored students through pair-programming and solved tickets raised by students on a variety of questions in Ruby on Rails, SQL, HTML/CSS, Bootstrap, and JavaScript.</li>
+                    </ul>
                   </div>
                 </div>
                 <a href="https://www.lewagon.com/" target="_blank">
@@ -111,30 +131,6 @@
                 <span>London, UK</span>
               </div>
             </div>
-            <!-- Team Maverick -->
-            <div class="experience-box">
-              <div class="flex-box">
-                <div class="flex-box flex-vertical-center flex-auto-width">
-                  <div>
-                    <h3>Professional Sailor</h3>
-                    <a href="https://www.maverick49.com/" target="_blank"><h4>Team Maverick</h4></a>
-                    <p>Joined the team to help build and maintain the boat, and extensively
-                      campaigned it in the Mediterranean, Caribbean, and the UK.
-                      Achieved class wins in the Rolex Middle Sea Race and the RORC
-                      Transatlantic Race.</p>
-                  </div>
-                </div>
-                <a href="https://www.maverick49.com/" target="_blank">
-                  <div class="company-icon-box" style="background-image: url(images/maverick.jpeg);">
-                  </div>
-                </a>
-              </div>
-              <hr>
-              <div class="flex-box flex-between">
-                <span>September 2015 - Present</span>
-                <span>Global</span>
-              </div>
-            </div>
             <!-- KPYR -->
             <div class="experience-box">
               <div class="flex-box">
@@ -142,12 +138,11 @@
                   <div>
                     <h3>Professional Sailor</h3>
                     <h4>Kees Postma Yacht Racing</h4>
-                    <p>Involvement in various sailing campaigns both onshore and
-                      offshore, most notably working as shore-crew for Team
-                      Brunel in Alicante and Lisbon during the 2014-15
-                      Volvo Ocean Race and racing on the famous J5 Ranger
-                      in St.Barth and Newport.
-                    </p>
+                    <p>Specialised in offshore yacht racing with various high-performance teams.</p>
+                    <ul>
+                      <li>Improvised solutions to serious damage to achieve a class win in a race across the Atlantic Ocean.</li>
+                      <li>Handled unexpected situations, including serious medical emergency and coordinating evacuation.</li>
+                    </ul>
                   </div>
                 </div>
                 <div class="company-icon-box" style="">
@@ -166,10 +161,11 @@
                   <div>
                     <h3>Global Brand Ambassador</h3>
                     <a href="https://www.garmin.com/en-GB" target="_blank"><h4>Garmin</h4></a>
-                    <p>Represented the global leader in satellite navigation
-                      and official supplier of the Clipper Round the World Yacht Race through
-                      blogs, digital content, and hosting corporate relations
-                      on sailing days.</p>
+                    <p>Represented the global leader in satellite navigation and official supplier of the Clipper Round the World Yacht Race.</p>
+                    <ul>
+                      <li>Wrote blogs and gathered digital content featuring Garmin's marine products.</li>
+                      <li>Hosted corporate relations on sailing days in various places around the world.</li>
+                    </ul>
                   </div>
                 </div>
                 <a href="https://www.garmin.com/en-GB" target="_blank">
@@ -190,10 +186,11 @@
                   <div>
                     <h3>Circumnavigator</h3>
                     <a href="https://www.clipperroundtheworld.com/" target="_blank"><h4>Clipper Round the World Yacht Race</h4></a>
-                    <p>Spotted a posted on the London Underground and signed up to
-                      the race having never sailed before. Subsequently
-                      completed the 55,000-mile, 11-month circumnavigation as watch
-                      captain and second-in-command and gained extensive experience in people and crisis management.</p>
+                    <p>Completed an eleven-month sailing race around the world having never sailed before.</p>
+                    <ul>
+                      <li>Learnt how to sail and rapidly became watch captain and second-in-command to the skipper.</li>
+                      <li>Rallied the team to turn a last place into a podium finish on route from the US to Ireland.</li>
+                    </ul>
                   </div>
                 </div>
                 <a href="https://www.clipperroundtheworld.com/" target="_blank">
@@ -214,13 +211,12 @@
                   <div>
                     <h3>Business Analyst</h3>
                     <a href="http://www.ohpen.com/" target="_blank"><h4>Ohpen</h4></a>
-                    <p>Returned to the company full-time after a successful
-                      internship in 2011 and finishing university. Translated
-                      business requirements into functional specifications for
-                      the Ohpen core-banking platform, including the adaptation
-                      to the US Foreign Account Tax Compliance Act.
-                      I slso co-wrote the migration procedure that moved the first bank
-                      in the world fully into the cloud.</p>
+                    <p>Worked on the development of Ohpen’s cloud-based core-banking platform.</p>
+                    <ul>
+                      <li>Interpreted and translated US tax law ‘FATCA’ into functional and operational specifications.</li>
+                      <li>Co-wrote procedure that migrated Robeco into the AWS cloud, the first bank in the world to do so.</li>
+                      <li>Designed user flows, wireframes, and UX with Axure RP and analyzed these with the developers.</li>
+                    </ul>
                   </div>
                 </div>
                 <a href="http://www.ohpen.com/" target="_blank">
@@ -241,10 +237,11 @@
                   <div>
                     <h3>Trainee Junior Consultant</h3>
                     <a href="http://www.coresta.nl/" target="_blank"><h4>Coresta</h4></a>
-                    <p>Returned for a second summer internship during which I
-                      pitched real estate investment funds to potential investors
-                      and achieved a significant improvement in operational efficiency
-                      by streamlining Excel spreadsheets using VBA.</p>
+                    <p>Returned for a second summer internship to support the real estate finance team.</p>
+                    <ul>
+                      <li>Pitched real estate investment funds to potential investors.</li>
+                      <li>Achieved a significant improvement in operational efficiency by streamlining Excel spreadsheets using VBA.</li>
+                    </ul>
                   </div>
                 </div>
                 <a href="http://www.coresta.nl/" target="_blank">
@@ -265,9 +262,11 @@
                   <div>
                     <h3>Summer Intern</h3>
                     <a href="http://www.ohpen.com/" target="_blank"><h4>Ohpen</h4></a>
-                    <p>Started out processing transactions in operations, then
-                      wrote functional specifications of improvements and new
-                      features for the company’s cloud-based core-banking platform.</p>
+                    <p>Supported the company for a summer as an all-round intern.</p>
+                    <ul>
+                      <li>Carried out KYC checks and processed transactions for the operations team.</li>
+                      <li>Wrote functional specifications of improvements and new features for the company’s cloud-based core-banking platform.</li>
+                    </ul>
                   </div>
                 </div>
                 <a href="http://www.ohpen.com/" target="_blank">
@@ -288,9 +287,11 @@
                   <div>
                     <h3>Trainee Junior Consultant</h3>
                     <a href="http://www.coresta.nl/" target="_blank"><h4>Coresta</h4></a>
-                    <p>Executed cash flow analysis for new real estate investment
-                      funds and conducted market and financial analysis on clients’
-                      prospective developments.</p>
+                    <p>Supported the real estate finance team.</p>
+                    <ul>
+                      <li>Executed cash flow analysis for new real estate investment funds.</li>
+                      <li>Conducted market and financial analysis on clients’ prospective developments.</li>
+                    </ul>
                   </div>
                 </div>
                 <a href="http://www.coresta.nl/" target="_blank">
@@ -488,7 +489,7 @@
 
           <!-- Features -->
           <div id="links" class="info-container">
-            <h2>Cool sailing stuff</h2>
+            <h2>Sailing features</h2>
             <div class="links-container">
               <h3>Articles & Blogs</h3>
               <hr>
