--- a/index.html
+++ b/index.html
@@ -131,6 +131,32 @@
                 <span>London, UK</span>
               </div>
             </div>
+            <!-- Lead Dev -->
+            <div class="experience-box">
+              <div class="flex-box">
+                <div class="flex-box flex-vertical-center flex-auto-width">
+                  <div>
+                    <h3>Lead Developer</h3>
+                    <a href="http://www.brainpowered.me/" target="_blank"><h4>www.brainpowered.me</h4></a>
+                    <p>Designed, implemented and shipped the final project of Le Wagon’s bootcamp with two classmates.</p>
+                    <ul>
+                      <li>Developed the web app from planning and design in Sketch into a working MVP two weeks later.</li>
+                      <li>Introduced Trello task management, GitHub code reviews, and set up Heroku for production.</li>
+                      <li>Built with Ruby on Rails, PostgreSQL, HTML, SCSS, and jQuery.</li>
+                    </ul>
+                  </div>
+                </div>
+                <a href="http://www.brainpowered.me/" target="_blank">
+                  <div class="company-icon-box" style="background-image: url(images/brainpowered.png);">
+                  </div>
+                </a>
+              </div>
+              <hr>
+              <div class="flex-box flex-between">
+                <span>August 2017</span>
+                <span>London, UK</span>
+              </div>
+            </div>
             <!-- KPYR -->
             <div class="experience-box">
               <div class="flex-box">
@@ -311,7 +337,7 @@
           <div id="stack" class="info-container">
             <h2>Tech stack</h2>
             <div class="tech-stack">
-              <h3>What I'm comfortable with</h3>
+              <h3>What I'm proficient in</h3>
               <hr>
               <div class="code-container">
                 <div class="code-box">
@@ -382,15 +408,12 @@
           <div id="projects" class="info-container">
             <h2>Projects</h2>
             <div class="project-box flex-box">
-              <div class="project-thumbnail" style="background-image: url(images/brainpowered.jpg);"></div>
+              <div class="project-thumbnail" style="background-image: url(images/marinecoursebooker.png);"></div>
               <div class="project-info">
                 <a href="http://www.brainpowered.me"  target="_blank">
-                  <h3>brainpowered.me</h3>
+                  <h3>marinecoursebooker.herokuapp.com</h3>
                 </a>
-                <p>Together with two of my classmates at Le Wagon we built and
-                   launched this MVP within 10 working days. Students can
-                   contribute to real projects by real companies and have a
-                   better chance at getting hired.</p>
+                <p>Developing a marketplace for courses in the marine industry with Ruby on Rails. Using it to gain an in- depth grasp of customizing Google maps and popular gems like Devise and Pundit.</p>
               </div>
             </div>
           </div>
@@ -489,7 +512,7 @@
 
           <!-- Features -->
           <div id="links" class="info-container">
-            <h2>Sailing features</h2>
+            <h2>Features</h2>
             <div class="links-container">
               <h3>Articles & Blogs</h3>
               <hr>
@@ -522,12 +545,16 @@
             <h3>Videos</h3>
             <hr>
               <div class="video-box">
+                <h3>Le Wagon Demo Day (5:40)</h3>
+                <iframe src="https://www.youtube.com/embed/xkr4inIoj5I?start=341" frameborder="0" allowfullscreen></iframe>
+              </div>
+              <div class="video-box">
                 <h3>Round the Island Race 2017 review</h3>
                 <iframe src="https://www.youtube.com/embed/DZ4roQPp6yw" frameborder="0" allowfullscreen></iframe>
               </div>
               <div class="video-box">
                 <h3>Pre-Middle Sea Race 2016 interview (4:00)</h3>
-                <iframe src="https://www.youtube.com/embed/XslqaK0V-lc" frameborder="0" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/XslqaK0V-lc?start=241" frameborder="0" allowfullscreen></iframe>
               </div>
               <div class="video-box">
                 <h3>Maverick below-deck tour</h3>
