Renames menu item to features

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         				<a href="#projects" class="nav-tab"><li>Projects</li></a>
                 <a href="#education" class="nav-tab"><li>Education</li></a>
                 <a href="#downloads" class="nav-tab"><li>Downloads</li></a>
-                <a href="#links" class="nav-tab"><li>Sailing features</li></a>
+                <a href="#links" class="nav-tab"><li>Features</li></a>
         			</ul>
         		</nav>
           </div>
