side projects and loader

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="spacer"></div>
             <div class="info-container">
               <h2>This is me</h2>
-              <p>With a degree in Investment and Financial Risk Management, experience as a business analyst for a leading banking software provider, several years in high-performance offshore yacht racing, and hands-on experience with web development, I have a unique set of skills ideally suited to managing the development of web products.
+              <p>With a degree in Investment and Financial Risk Management, experience as a business analyst for a leading banking software provider, several years in high-performance offshore yacht racing, and hands-on experience with web development, I have a unique set of skills ideally suited to understanding and managing the development of web products, both from a business as well as a technological point of view.
               <br><br>
               I have a proven track record of rapidly gaining proficiency regardless of environment or job setting, and I'm always thinking of the human side of products by understanding what the customer wants, what the business goals are, and what the team needs.
               <br><br>
@@ -220,7 +220,7 @@
                 <div class="flex-box">
                   <div class="flex-box flex-vertical-center flex-auto-width">
                     <div>
-                      <h3>Circumnavigator</h3>
+                      <h3>Circumnavigator & Watch Captain</h3>
                       <a href="https://www.clipperroundtheworld.com/" target="_blank"><h4>Clipper Round the World Yacht Race</h4></a>
                       <p>Completed an eleven-month sailing race around the world having never sailed before.</p>
                       <ul>
