adds React Native and Expo XDE

--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
             </div>
             <nav class="nav-container">
         			<ul class="nav-list">
-        				<a class="nav-tab active" href="#about"><li>This is me</li></a>
+        				<a class="nav-tab active" href="#about"><li>About</li></a>
         				<a href="#experience" class="nav-tab"><li>Experience</li></a>
-        				<a href="#stack" class="nav-tab"><li>Tech stack</li></a>
-        				<a href="#projects" class="nav-tab"><li>Projects</li></a>
+        				<a href="#stack" class="nav-tab"><li>Tech Stack</li></a>
+        				<a href="#projects" class="nav-tab"><li>Side Projects</li></a>
                 <a href="#education" class="nav-tab"><li>Education</li></a>
                 <a href="#links" class="nav-tab"><li>Links and content</li></a>
         			</ul>
@@ -177,7 +177,7 @@
                       <p>Specialised in offshore yacht racing with various high-performance teams.</p>
                       <ul>
                         <li>Improvised solutions to serious damage to achieve a class win in a race across the Atlantic Ocean.</li>
-                        <li>Handled unexpected situations, including serious medical emergency and coordinating evacuation.</li>
+                        <li>Managed unexpected situations, including serious medical emergency and coordinating evacuation.</li>
                       </ul>
                     </div>
                   </div>
@@ -225,7 +225,7 @@
                       <p>Completed an eleven-month sailing race around the world having never sailed before.</p>
                       <ul>
                         <li>Learnt how to sail and rapidly became watch captain and second-in-command to the skipper.</li>
-                        <li>Rallied the team to turn a last place into a podium finish on route from the US to Ireland.</li>
+                        <li>Rallied the team to turn a last place into a podium finish in a race from the US to Ireland.</li>
                       </ul>
                     </div>
                   </div>
@@ -251,7 +251,7 @@
                       <ul>
                         <li>Interpreted and translated US tax law ‘FATCA’ into functional and operational specifications.</li>
                         <li>Co-wrote procedure that migrated Robeco into the AWS cloud, the first bank in the world to do so.</li>
-                        <li>Designed user flows, wireframes, and UX with Axure RP and analyzed these with the developers.</li>
+                        <li>Designed user flows, wireframes, and UX with Axure RP and evaluated these with the engineers.</li>
                       </ul>
                     </div>
                   </div>
@@ -348,7 +348,7 @@
           <div id="stack">
             <div class="spacer"></div>
             <div class="info-container">
-              <h2>Tech stack</h2>
+              <h2>Technologies I've used</h2>
               <div class="tech-stack">
                 <h3>Languages</h3>
                 <hr>
@@ -407,7 +407,7 @@
                 <div class="code-container">
                   <div class="code-box">
                     <img class="code-icon" src="images/react.png" alt="">
-                    <h4>React</h4>
+                    <h4>React (Native)</h4>
                   </div>
                   <div class="code-box">
                     <img class="code-icon" src="images/redux.png" alt="">
@@ -461,6 +461,10 @@
                     <img class="code-icon" src="images/sketch.png" alt="">
                     <h4>Sketch</h4>
                   </div>
+                  <div class="code-box">
+                    <img class="code-icon" src="images/expo.png" alt="">
+                    <h4>Expo XDE</h4>
+                  </div>
                 </div>
               </div>
             </div>
@@ -470,7 +474,7 @@
           <div id="projects">
             <div class="spacer"></div>
             <div class="info-container">
-              <h2>Projects</h2>
+              <h2>Side Projects</h2>
               <div class="project-box flex-box">
                 <!-- <div class="project-thumbnail" style="background-image: url(images/marinecoursebooker.png);"></div> -->
                 <div class="project-info">
@@ -572,7 +576,7 @@
           <div id="links">
             <div class="spacer"></div>
             <div class="info-container">
-              <h2>Links and content</h2>
+              <h2>More links and content</h2>
               <div class="links-container">
                 <h3>CV</h3>
                 <hr>
